# Razor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SPEC_FREEZE.md  config.example.toml
config/: config.toml
docs/: arbitrage_backlog.md  architecture.md  market_selection.md  phase1_followup_backlog.md  phase2_architecture.md  project_guide.md  the_smart_ape.md
scripts/: day14_report.py
src/: brain.rs  brain_sweep.rs  buckets.rs  calibration.rs  clob.rs  clob_order.rs  config.rs  dataset_split.rs  eth.rs  execution.rs  feed.rs  graceful_shutdown.rs  health.rs  json_util.rs  lib.rs  main.rs  reasons.rs  recorder.rs  replay.rs  report.rs  run_compare.rs  run_context.rs  run_meta.rs  schema.rs  shadow.rs  shadow_sweep.rs  snapshot_logger.rs  sniper.rs  trade_store.rs  types.rs
src/market_select/: gamma.rs  metrics.rs  mod.rs  output.rs  probe.rs  select.rs
tests/: brain_round_gate.rs  day14_report_tests.rs  reasons_enum.rs  reasons_tests.rs  replay_tests.rs  report_tests.rs  shadow_dedup.rs  trade_store_tests.rs
tests/fixtures/brain_sweep_small/: snapshots.csv  trades.csv
tests/fixtures/replay_small/: snapshots.csv  trades.csv
