[package]
name = "razor"
version = "1.3.2-b"
edition = "2021"
license = "MIT"
default-run = "razor"

[[bin]]
name = "razor"
path = "src/main.rs"

[[bin]]
name = "day14_report"
path = "src/bin/day14_report.rs"

[[bin]]
name = "market_select"
path = "src/bin/market_select.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
futures-util = "0.3.31"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.26.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
